# playground_ai

./: README.md  docker-compose.yml  first_chat_interactive.ipynb  main.py  pyproject.toml  work_on calendar.ipynb
.devcontainer/: Dockerfile  devcontainer.json  run-dev.sh  setup.sh
